<resources>
    <string name="app_name">Bicycle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_text">请对准车牌上的二维码</string>
    <string name="shanliang_one">嘿车自创办以来，始终坚持用技术手段向用户提供便捷，经济，环保的绿色城市出行方式。为实现这个目标，我们不用固定车桩，单车散落分布在道路两旁以供大家方便用车，我们坚持鼓励正确的用车行为，因此也制定了“善良分”积分规则，帮助大家更好的了解及使用单车。</string>
    <string name="shanliang_two">每个用户默认100分善良分为起始分数，最低分数为0，分数越高，意味着越符合原则。而善良值越低，意味着该用户有过不恰当的使用行为。</string>
    <string name="shanliang_three">善良分过低时，用车的会员时间亦会受到影响。当善良分低于0分时，该会员年费将增至888元/年。中国用户（含中国注册的国际用户）：88元/年（不必担心，注册时初始善良分为100分，扣分规则查看我的善良分）。</string>
    <string name="shanliang_four">您所有扣分记录都可以在个人中心→我的善良分→负面记录里面看到。</string>
    <string name="zhaobudaoche_one">当您在app地图上于用车地点附近看到了自行车图标，这说明附近有可用的嘿车出行单车。</string>
    <string name="zhaobudaoche_two">在定位点找不到单车时，以下方法可帮助找车：</string>
    <string name="zhaobudaoche_three">点击单车图标，若浮现出照片，说明这辆单车有上一位用户提供的找车帮助。点击照片，可看到停车地点的大图。如果找车帮助信息有用，请点赞，上一位用户获得您的肯定时，会得到善良分。</string>
    <string name="zhaobudaoche_four">定位受周围环境影响，有时候会有偏移。请环顾定位点四周，马路对面寻找单车。</string>

    <string name="prize_one">1：缴纳一年年费的，可以拥有一次抽奖机会，点击开始，将会获赠最少30天，最多90天的免费骑行天数。</string>
    <string name="prize_two">2：缴纳两年年费的，可以拥有两次抽奖机会，点击开始，每次将会获赠最少30天，最多90天的免费骑行天数，两次的赠送天数可以累计。</string>
    <string name="prize_dialog">   所抽取的天数将自动计入剩余骑行天数中，可进入个人中心查看倒计时。</string>
    <string name="notifyTitle">温馨提示</string>

    <string name="isNetwork">网络不可用，请设置网络！</string>
    <string name="notifyMsg">是否开启手机定位权限</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="never">不再提醒</string>
    <string name="ble_feature_tip">当前手机不支持蓝牙4.0</string>
    <string name="ble_tip">蓝牙未开启，马上去打开？</string>

    <string name="ble_login">蓝牙登录中…</string>
    <string name="ble_disconnect">蓝牙未连接</string>
    <string name="ble_login_success">蓝牙登录成功</string>
    <string name="ble_login_fail">蓝牙登录失败</string>
    <string name="message_denied">\"%1$s\" 权限被拒绝</string>


    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>


    <string name="app_tip">提示</string>
    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>

    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>

</resources>
