<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.bicycle.Personal.Shanliangfen.GuizeActivity">


    <include
        android:id="@+id/title"
        layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="关于“善良分”"
            android:textColor="#000000"
            android:textSize="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/shanliang_one"
            android:textColor="#363636"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            android:text="@string/shanliang_two"
            android:textColor="#363636"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            android:text="@string/shanliang_three"
            android:textColor="#363636"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            android:text="@string/shanliang_four"
            android:textColor="#363636"
            android:textSize="15dp" />


    </LinearLayout>
</LinearLayout>
